aggiustamento sub title

--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,7 @@
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     text-align: center;
     padding: 20px;
+    margin-bottom: 50px;
 }
 
 /* Scheletro etichetta*/
