--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,7 @@ section>.float-left {
     background-color: black;
     color: white;
     margin-right: 20px;
+    box-shadow: 10px 10px 5px #000000;
 }
 
 /* Testo dell'etichetta*/
