--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,7 @@
 
 /* Scheletro etichetta*/
 section>.float-left {
+    border-radius: 5px;
     padding-right: 20px;
     margin-bottom: 40px;
     background-color: black;
